# xml-differ

./: CITATION.cff  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: api.yml  web.yml
api/: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  dependencies.py  main.py  pyproject.toml  response_models.py
api/db/: connection.py  models.py
api/diff/: differ.py  formatter.py  htmlformatter.xslt  types.py  xmldiff_strat.py
api/laws/: importer.py  info.py  parser.py  repo.py
api/routers/: diff.py  laws.py  paragraphs.py  response_models.py
api/worker/: runner.py  tasks.py
frontend/: .env.sample  Dockerfile  README.md  eslint.config.js  h3-entry.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/client/@tanstack/: vue-query.gen.ts
frontend/client/client/: client.ts  index.ts  types.ts  utils.ts
frontend/components/: ChangeIndicator.vue  Content.vue  DiffOptions.vue  DiffViewSwitch.vue  LawList.vue  LawSearch.vue  LawVersionSelector.vue  LawVersionViewer.vue  Link.vue  Navbar.vue  Sidebar.vue  VirtualLawList.vue
frontend/components/paragraphs/: MoveChangeButtons.vue  (+4 more)
frontend/composables/: useAllLaws.ts  useLawList.ts  useParagraphs.ts  useParseParagraphXML.ts  useParsedDiff.ts  useSyncedUrlParam.ts
frontend/layouts/: LayoutDefault.vue
frontend/pages/: +apiUrl.ts  +config.ts  +data.ts  +onCreateApp.ts  +onCreatePageContext.server.ts  +queryClientConfig.ts  utils.ts
frontend/server/: h3-entry.ts
(+6 files in other folders)
