[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pymongo>=4.13.2",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "rq>=2.4.0",
    "xmldiff>=2.7.0",
]
