[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.30.0",
    "fastapi[standard]>=0.115.13",
    "gitpython>=3.1.44",
    "python-multipart>=0.0.20",
    "xmldiff>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

