[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.30.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[standard]>=0.115.14",
    "gitpython>=3.1.44",
    "python-multipart>=0.0.20",
    "rq>=2.4.0",
    "xmldiff>=2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

